// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
  id="Field"
  rows={null}
>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
    cursor="pointer"
    fontSize="1rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing=".5px"
  >
    Field Name
  </label>
  <p
    className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
    fontSize="1rem"
    fontWeight={500}
    id={null}
    letterSpacing="0.5px"
  >
    Field Value
  </p>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb Field__FieldGrid-sc-11od8ug-4 dSaJhd"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
    id="Default"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Inline Field (Default)
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Field Value
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 fAPoMC"
    id="Vertical"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Vertically Aligned Field
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Field Value
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
    id="Edge"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Edge Aligned Field
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 jYKsXf"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Field Value
    </p>
  </section>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRSilm Field__FieldGrid-sc-11od8ug-4 dSaJhd"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
    id="Standard Value"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field Name
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={500}
      id={null}
      letterSpacing="0.5px"
    >
      Standard Value
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
    id="Linked Value"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field Name
    </label>
    <a
      className="Typography__LinkText-sc-19auepv-1 kZPEOL"
      disabled={false}
      fontSize="1rem"
      fontWeight={500}
      href={null}
      letterSpacing="0.2px"
      onClick={[Function]}
      target={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Linked Value
      </p>
    </a>
  </section>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cRSilm"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-4 dSaJhd"
    id="Group 1"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Field__GroupTitle-sc-11od8ug-1 eJkuie"
      fontSize="0.875rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.25px"
    >
      Auto
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 fwAAvS"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 fwAAvS"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 fwAAvS"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Go
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-4 dSaJhd"
    id="Group 1"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Field__GroupTitle-sc-11od8ug-1 eJkuie"
      fontSize="0.875rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.25px"
    >
      1x (Default)
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 YEdAI"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Go
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-4 dSaJhd"
    id="Group 1"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Field__GroupTitle-sc-11od8ug-1 eJkuie"
      fontSize="0.875rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.25px"
    >
      2x
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 jJKQmj"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 jJKQmj"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 jJKQmj"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Go
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-4 dSaJhd"
    id="Group 1"
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 ggZUaJ Field__GroupTitle-sc-11od8ug-1 eJkuie"
      fontSize="0.875rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.25px"
    >
      3x
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 gSTnwq"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 gSTnwq"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 gSTnwq"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 hGcCeY Field__FieldLabel-sc-11od8ug-2 kIQpiW"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iOVbHb Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={500}
        id={null}
        letterSpacing="0.5px"
      >
        Go
      </p>
    </section>
  </section>
</section>
`;
